--- a/Job Portal/frontend/package.json
+++ b/Job Portal/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^5.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
