--- a/Job Portal/frontend/package.json
+++ b/Job Portal/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
