--- a/Job Portal/frontend/package.json
+++ b/Job Portal/frontend/package.json
@@ -49,7 +49,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "autoprefixer": "^10.4.19",
-    "tailwindcss": "^3.4.3"
+    "babel-loader": "^9.1.3",
+    "tailwindcss": "^3.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
